Modificato component che visualizza il nome città

--- a/force-app/main/default/lwc/weatherComponent01/weatherComponent01.html
+++ b/force-app/main/default/lwc/weatherComponent01/weatherComponent01.html
@@ -5,7 +5,8 @@
             <lightning-formatted-text aria-label="City" value="Ecco i risultati meteo per la città " ></lightning-formatted-text>
             <br>
             <br>
-            <lightning-formatted-text aria-label="CountryText" value="Milano si trova in "></lightning-formatted-text>
+            <lightning-formatted-text aria-label="CountryTextCity" value={cityName}></lightning-formatted-text>
+            <lightning-formatted-text aria-label="CountryText" value=" si trova in "></lightning-formatted-text>
             <lightning-formatted-text aria-label="CountryValue" value={country}></lightning-formatted-text>
             <br>
             <br>
